:checkered_flag: Fix messed up active state on IE

--- a/components/tab/theme.css
+++ b/components/tab/theme.css
@@ -48,6 +48,7 @@
     height: 3px;
     width: 100%;
     bottom: 0;
+    left: 0;
     transition: transform var(--animation-duration) var(--animation-curve-fast-out-slow-in);
     transform: scale(0, 1);
   }
